--- a/comida/templates/email_contrasena.html
+++ b/comida/templates/email_contrasena.html
@@ -10,6 +10,7 @@
             <div class="form-header">
                 <div class="titles">
                     <div class="title-login">Nueva contraseña</div>
+                    <p class="subtitle">Crea una contraseña segura para proteger tu cuenta</p>
                 </div>
             </div>
             <form method="POST">
