--- a/comida/static/nosotros.css
+++ b/comida/static/nosotros.css
@@ -105,7 +105,10 @@
         order: 1;
     }
     
-.about-item {
-    margin-bottom: 40px;
-}
+    .about-item {
+        margin-bottom: 40px;
+    }
+    .video{
+        height: 300px;  
+    }
 }
