--- a/comida/templates/manual.html
+++ b/comida/templates/manual.html
@@ -17,16 +17,17 @@
             <p>Para acceder a la plataforma, puede registrarse como nuevo usuario o iniciar sesión con su cuenta existente.</p>
             <br>
             <ul>
-                <li>🎗️ En el icono en la parte superior derecha entrara para iniciar sesion y el manual de usuario.</li>
-                <li>🎗️ Haga clic en "Registrarse" para crear una nueva cuenta.</li>
+                <li>🌭 En el icono en la parte superior derecha entrara para iniciar sesion y el manual de usuario.</li>
+                <li>🌭 Haga clic en "Registrarse" para crear una nueva cuenta.</li>
                 <img src="{% static 'img/home.png' %}" alt="Registro e Inicio de Sesión">
-                <li>🎗️  Ingrese sus datos personales como nombre y apellido, nombre de usuario, correo, teléfono y dirección.</li>
+                <li>🌭  Ingrese sus datos personales como nombre y apellido, nombre de usuario, correo, teléfono y dirección.</li>
                 <img src="{% static 'img/regis.png' %}" alt="Registro e Inicio de Sesión">
-                <li> 🎗️Si ya tiene una cuenta, haga clic en "Iniciar sesión" e ingrese sus datos, si ha olvidado su contraseña, seleccione donde dice ¿Olvidaste tu Contraseña?.</li>
+                <li>🌭 Si ya tiene una cuenta, haga clic en "Iniciar sesión" e ingrese sus datos, si ha olvidado su contraseña, seleccione donde dice ¿Olvidaste tu Contraseña?.</li>
                 <img src="{% static 'img/inicio.png' %}" alt="Registro e Inicio de Sesión">
-                <li>🎗️ Ingrese el correo electronico que tiene asociado a su cuenta para que le llegue un enlace donde podra cambiar la contraseña.</li>
-                <li>🎗️ ingrese la nueva contraseña y puede verificarla al dar clic al ojito, de clic en guardar y listo, ya puedes iniciar sesión.</li>
-                <img src="{% static 'img/contraseña.png' %}" alt="Registro e Inicio de Sesión">
+                <li>🌭 Ingrese el correo electronico que tiene asociado a su cuenta para que le llegue un enlace donde podra cambiar la contraseña.</li>
+                <img src="{% static 'img/correo.png' %}" alt="Registro e Inicio de Sesión">
+                <li>🌭 ingrese la nueva contraseña y puede verificarla al dar clic al ojito, de clic en guardar y listo, ya puedes iniciar sesión.</li>
+                <img src="{% static 'img/cambiar.png' %}" alt="Registro e Inicio de Sesión">
                 
             </ul>
             <p>Despues de inciar sesión o registrarse lo direccionara al inicio, ya tendra acceso al perfil de usuario, productos, servicio de reserva, carrito de compra e historial</p>
@@ -38,12 +39,12 @@
             <p>Para reservar una mesa, siga los siguientes pasos:</p>
             <br>
             <ul>
-                <li>🎗️ Acceda a la sección de servicios y selecione el boton de reservar ahora.</li>
+                <li>🌭 Acceda a la sección de servicios y selecione el boton de reservar ahora.</li>
                 <img src="{% static 'img/servicios.png' %}" alt="Reserva de Mesas">
-                <li>🎗️ Ingrese los datos neceesarios para la reserva.</li>
-                <li>🎗️ Seleccione una mesa disponible.</li>
-                <li>🎗️ Elija la fecha y el horario permitido (5 PM a 11 PM).</li> 
-                <li>🎗️ dar clic al boton reservar y espere hasta que salga el mensaje de exito</li> 
+                <li>🌭 Ingrese los datos neceesarios para la reserva.</li>
+                <li>🌭 Seleccione una mesa disponible.</li>
+                <li>🌭 Elija la fecha y el horario permitido (5 PM a 11 PM).</li> 
+                <li>🌭 dar clic al boton reservar y espere hasta que salga el mensaje de exito</li> 
                 <img src="{% static 'img/reservas.png' %}" alt="Reserva de Mesas">
             </ul>
             <p>le llegara un mensaje de los detalles de la resrevar al correo ingresado.</p>
@@ -55,29 +56,29 @@
             <p>Se dirije a productos, seleciona los que desea y los agregara al carrito dando clic en el boton agregar al carrito.</p>
             <img src="{% static 'img/productos.png' %}" alt="Proceso de Compra">
             <ul>
-                <li>🎗️Ingresa al carrito en el icono en la parte superiror derecha.</li>
-                <li>🎗️ Verifique los productos seleccionados, puede cambiar la cantidad y eliminar un producto no deseado.</li>
-                <li>🎗️ Haga clic en "Proceder al pago".</li>
-                <li>🎗️ Haga clic en "Proceder al pago" para realizar el pago o en seguir comprando para ir a la pagina de productos.</li>
+                <li>🌭 Ingresa al carrito en el icono en la parte superiror derecha.</li>
+                <li>🌭 Verifique los productos seleccionados, puede cambiar la cantidad y eliminar un producto no deseado.</li>
+                <li>🌭 Haga clic en "Proceder al pago".</li>
+                <li>🌭 Haga clic en "Proceder al pago" para realizar el pago o en seguir comprando para ir a la pagina de productos.</li>
             </ul>
             <img src="{% static 'img/carrito.png' %}" alt="Proceso de Compra">
             <ul>
                 <p>hay 3 pasos a seguir para completra la compra</p>
-                <li>🎗️ paso 1: verifique o ingrese sus datos.</li>
-                <li>🎗️ Haga clic en "en siguiente para el paso dos".</li>
+                <li>🌭 paso 1: verifique o ingrese sus datos.</li>
+                <li>🌭 Haga clic en "en siguiente para el paso dos".</li>
             </ul>
             <img src="{% static 'img/paso1.png' %}" alt="Proceso de Compra">
             <ul>
-                <li>🎗️ paso 2: selecionar el metodo de pago.</li>
-                <li>🎗️ entre las opciones esta Nequi y Daviplata y pago contra entrega, le dara clic le aparecera el qr y numero para realizar el pago.</li>
+                <li>🌭 paso 2: selecionar el metodo de pago.</li>
+                <li>🌭 entre las opciones esta Nequi y Daviplata y pago contra entrega, le dara clic le aparecera el qr y numero para realizar el pago.</li>
                 
-                <li>🎗️ Haga clic en "en siguiente para el paso tres".</li>
+                <li>🌭 Haga clic en "en siguiente para el paso tres".</li>
             </ul>
             <img src="{% static 'img/paso2.png' %}" alt="Proceso de Compra">
             <ul>
-                <li>🎗️ paso 3: si seleciono Nequi o Daviplata le aparecera la opcion para agregar el comprobante de pago</li>
-                <li>🎗️ y en pago contraentrega solo le aparecera para confirmar pedido</li>
-                <li>🎗️ luego le da clic a confirmar pedido espera un momento y aparecerael mensaje de exito</li>
+                <li>🌭 paso 3: si seleciono Nequi o Daviplata le aparecera la opcion para agregar el comprobante de pago</li>
+                <li>🌭 y en pago contraentrega solo le aparecera para confirmar pedido</li>
+                <li>🌭 luego le da clic a confirmar pedido espera un momento y aparecerael mensaje de exito</li>
             </ul>
             <img src="{% static 'img/paso3.png' %}" alt="Proceso de Compra">
             <p>le llegara un mensaje de los detalles de la compra al correo ingresado.</p>
@@ -88,8 +89,8 @@
             <p>Al ingresar a este apartado tendras un formulario para que puedas comunicarte o darnos tu opinion.</p>
             <br>
             <ul>
-                <li>🎗️ ingrese los datos necesarios y el mensaje.</li>
-                <li>🎗️ despues de dar clic en reservar se envia el menaje.</li>
+                <li>🌭 ingrese los datos necesarios y el mensaje.</li>
+                <li>🌭 despues de dar clic en reservar se envia el menaje.</li>
             </ul>
             <img src="{% static 'img/contactenos.png' %}" alt="Métodos de Pago">
         </div>
@@ -98,7 +99,7 @@
             <p>Podras ver tus datos ingresados</p>
             <br>
             <ul>
-                <li>🎗️ al dar clic en editar perfil, podras editar tu informacion y agregar una foto de perfil </li>
+                <li>🌭 al dar clic en editar perfil, podras editar tu informacion y agregar una foto de perfil </li>
                 
             </ul>
             <img src="{% static 'img/perfil.png' %}" alt="Métodos de Pago">
