--- a/comida/templates/regis.html
+++ b/comida/templates/regis.html
@@ -12,19 +12,20 @@
         <h2>Registrarse</h2>
         <form action="/regis" method="post">
             {% csrf_token %}
-
             <div class="name-container">
                 <div>
-                    <input type="text" placeholder="Nombre"  id="first_name" name="first_name" required>
+                    <input type="text" placeholder="Nombre"  id="first_name" name="first_name" maxlength="20"  oninput="this.setCustomValidity(/[^A-Za-záéíóúÁÉÍÓÚÑñ \s]/.test(this.value) ? 'Solo se permiten letras y espacios' : ''); this.reportValidity()"
+                    pattern="^[A-Za-záéíóúÁÉÍÓÚÑñ \s]+$"  required>
                 </div>
                 <div>
-                    <input type="text" placeholder="Apellido:" id="last_name" name="last_name" required>
+                    <input type="text" placeholder="Apellido:" id="last_name" name="last_name" maxlength="20"  oninput="this.setCustomValidity(/[^A-Za-záéíóúÁÉÍÓÚÑñ \s]/.test(this.value) ? 'Solo se permiten letras y espacios' : ''); this.reportValidity()"
+                    pattern="^[A-Za-záéíóúÁÉÍÓÚÑñ \s]+$"  required>
                 </div>
             </div>        
-            <input type="text" placeholder="Nombre de usuario" id="username" name="username" required>
-            <input type="email" placeholder="Correo Electronico"  id="email" name="email" required>
-            <input type="text" placeholder="Telefono"  id="phone" name="phone" required>
-            <input type="text" placeholder="Dirección"  name="address" required>
+            <input type="text" placeholder="Nombre de usuario" id="username" name="username" maxlength="15" required>
+            <input type="email" placeholder="Correo Electronico"  id="email" name="email"maxlength="30"   required>
+            <input type="text" placeholder="Telefono"  id="phone" name="phone" onkeypress="return event.charCode >= 48 && event.charCode <= 57" maxlength="10" required>
+            <input type="text" placeholder="Dirección"  name="address" maxlength="30"   required>
             <div class="password-container">
                 <input type="password" placeholder="Contraseña"  id="password" name="password" required>
                 <i id="togglePassword" class="fa fa-eye" onclick="togglePassword()"></i>
