--- a/comida/templates/reservas.html
+++ b/comida/templates/reservas.html
@@ -18,13 +18,14 @@
             {% csrf_token %}
             
             <input type="text" placeholder="Nombre" id="nombre" name="nombre" 
-                value="{% if request.user.is_authenticated %}{{ request.user.first_name }} {{ user.last_name }}{% endif %}" required>
+                value="{% if request.user.is_authenticated %}{{ request.user.first_name }} {{ user.last_name }}{% endif %}" maxlength="40" oninput="this.setCustomValidity(/[^A-Za-záéíóúÁÉÍÓÚÑñ \s]/.test(this.value) ? 'Solo se permiten letras y espacios' : ''); this.reportValidity()"
+                pattern="^[A-Za-záéíóúÁÉÍÓÚÑñ \s]+$"  required>
 
             <input type="email" placeholder="Correo Electrónico" id="email" name="email" 
-                value="{% if request.user.is_authenticated %}{{ request.user.email }}{% endif %}" required>
+                value="{% if request.user.is_authenticated %}{{ request.user.email }}{% endif %}" maxlength="30" required>
 
             <input type="text" placeholder="Teléfono" id="telefono" name="telefono" 
-                value="{% if request.user.is_authenticated %}{{ user.profile.phone_number|default:'' }}{% endif %}" required>
+                value="{% if request.user.is_authenticated %}{{ user.profile.phone_number|default:'' }}{% endif %}" onkeypress="return event.charCode >= 48 && event.charCode <= 57" maxlength="10" required>
 
             <div class="form-row">
                 <div class="form-group">
